servidor: openapi basic auth, etc
