# servidor/flask/openapi_server/models/__init__.py
@@ -6,7 +6,6 @@ from __future__ import absolute_import
 from openapi_server.models.cart_status import CartStatus
 from openapi_server.models.item_data import ItemData
 from openapi_server.models.login import Login
-from openapi_server.models.login_req import LoginReq
 from openapi_server.models.new_login_req import NewLoginReq
 from openapi_server.models.payment_data_req import PaymentDataReq
 from openapi_server.models.purchase_item import PurchaseItem
